--- a/requirements.txt
+++ b/requirements.txt
@@ -49,9 +49,10 @@ streamlit==1.22.0
 tenacity==8.2.2
 toml==0.10.2
 toolz==0.12.0
-torch==2.0.0
-torchaudio==2.0.0
-torchvision==0.15.0
+torch==2.0.0+cu117
+//torch==2.0.0
+//torchaudio==2.0.0
+//torchvision==0.15.0
 tornado==6.3.2
 triton==2.0.0
 tzdata==2023.3
